quote option for github readme view

--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 * これは何？
   CloudStack4.0のインストールを自動化するスクリプトです．
   CentOS6.3をnetinstallした素の状態で実行することを想定しています．
-  CentOSのインストール後，このスクリプトに-canmオプションをつけてを1度だけ実行すれば，
+  CentOSのインストール後，このスクリプトに'-canm'オプションをつけてを1度だけ実行すれば，
   自動的にCloudStackが構成されます．
   その後はhttpでCloudStackのWebUIにアクセスできるようになります．
 
@@ -22,11 +22,11 @@
   | -m     | install management server |
   | -h     | show this help            |
   | -r     | reboot after installation |
-  管理サーバのみをインストールする場合は-cm，
-  NFSサーバのみをインストールする場合は-cn，
-  コンピューティングノードをインストールする場合は-ca，
+  管理サーバのみをインストールする場合は'-cm'，
+  NFSサーバのみをインストールする場合は'-cn'，
+  コンピューティングノードをインストールする場合は'-ca'，
   というようにオプションを設定します．
-  -cオプションでは，SELinuxの設定など，どの環境でも共通の設定を行います．
+  '-c'オプションでは，SELinuxの設定など，どの環境でも共通の設定を行います．
   : ./autoinstall_cloudstack.sh -cnamr
   を実行すると，実行したマシン1台でCloudStackが稼働するように
   インストール・設定が行われます．
