remove my ssh public key

--- a/README.org
+++ b/README.org
@@ -10,6 +10,8 @@
   インストール作業の大幅な効率化が見込めます．
 
 * 使い方
+  スクリプトをどこかにダウンロードし，先頭のSSH_PUBLIC_KEYに自分のマシンのSSH鍵を入力します．
+  （この作業は必須ではありませんが，sshでログインする際に時間を削減できます）
   yumでwgetやopenssh-clients(scp)をインストールして，スクリプトをダウンロードします．
   : ./autoinstall_cloudstack.sh -h
   を実行すると，有効なオプションが出力されます．
