--- a/README.org
+++ b/README.org
@@ -10,11 +10,12 @@
   インストール作業の大幅な効率化が見込めます．
 
 * 使い方
-  スクリプトをどこかにダウンロードし，先頭のSSH_PUBLIC_KEYに自分のマシンのSSH鍵を入力します．
-  （この作業は必須ではありませんが，sshでログインする際に時間を削減できます）
-  yumでwgetやopenssh-clients(scp)をインストールして，スクリプトをダウンロードします．
-  : ./autoinstall_cloudstack.sh -h
-  を実行すると，有効なオプションが出力されます．
+  1. このインストールスクリプトをCloudStackを構築するホスト上にダウンロードします
+  2. スクリプトの先頭のSSH_PUBLIC_KEYに自分のマシンのSSH公開鍵を入力します（この作業は任意ですが，sshでログインする際に時間を削減できます）
+  3. yumでwgetやopenssh-clients(scp)をインストールして，スクリプトをダウンロードします
+  4. 以下のようにコマンドを入力すると，有効なオプションが出力されます
+     : ./autoinstall_cloudstack.sh -h
+  5. 適宜オプションを付加してスクリプトを実行します
 
 ** 有効なオプション
   | オプション | 説明                                   |
